<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.3">
  <DUT Name="E_RoofCommand" Id="{1cd188b9-26bf-44a0-a31f-579d97ddeeca}">
    <Declaration><![CDATA[TYPE E_RoofCommand :
(
	CloseRoof,
 	OpenRoof,
	StopRoof
);
END_TYPE ]]></Declaration>
  </DUT>
</TcPlcObject>