<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.3">
  <DUT Name="E_RoofStatus" Id="{906d0ce7-8fcf-405b-bd26-8bc3bc4a912a}">
    <Declaration><![CDATA[TYPE E_RoofStatus :
(
	StatusUndefined 	:= 0,
	StatusClosed 		:= 100,
	StatusLocking 		:= 200,
	StatusLocked 		:= 300,
	StatusUnlocking 	:= 400,
	StatusUnlocked 		:= 500,
	StatusStartOpening 	:= 600,
	StatusOpening 		:= 700,
	StatusEndOpening 	:= 800,
	StatusOpened 		:= 900,
	StatusStartClosing 	:= 1000,
	StatusClosing 		:= 1100,
	StatusEndClosing 	:= 1200,
	
	StatusError 		:= -1
);
END_TYPE ]]></Declaration>
  </DUT>
</TcPlcObject>